--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,14 +2,14 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    buildToolsVersion "23.0.3"
 
     defaultConfig {
         applicationId "com.dvd.android.xposed.restoreshutdowndialog"
         minSdkVersion 21
-        targetSdkVersion 22
-        versionCode 5
-        versionName "1.2.1"
+        targetSdkVersion 23
+        versionCode 6
+        versionName "1.2.2"
     }
     buildTypes {
         release {
@@ -20,5 +20,5 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    provided 'de.robv.android.xposed:api:82'
 }
